--- a/src/main/resources/templates/userRoleform.html
+++ b/src/main/resources/templates/userRoleform.html
@@ -21,7 +21,7 @@
         <br/>
         <form action="#" th:action="@{/userRoles/adduserRole}" th:object="${userRoleModel}" method="post">
             <input type="hidden" th:field="*{id}"></input>
-            User:
+            Username: <input type="text" class="form-control" th:field="*{user}" th:value="${user}"></input>
             <br/>
             Role: <input type="text" class="form-control" th:field="*{role}" th:value="${role}"></input>
             <br/>
