--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -35,8 +35,17 @@
             <tr th:each="user : ${users}">
                 <td th:text="${user.username}"></td>
                 <td th:text="${user.password}"></td>
-                <td th:text="${user.enabled}"></td>
-                <td th:text="${user.userRoles}"></td>
+                <td>
+                    <input type="checkbox" name="enabled" disabled="true" th:checked="${user.enabled}"></input>
+                </td>
+                <td th:switch="${user.userRoles.size()}">
+                    <label th:case="'0'">
+                        No roles assigned.
+                    </label>
+                    <select th:case="*">
+                        <option th:each="userRole : ${user.userRoles}" value="${userRole}" th:value="${userRole.id}" th:text="${userRole.role}"></option>
+                    </select>
+                </td>
                 <td>
                     <a href="#" th:href="@{/users/userForm?username=__${user.username}__}">
                         <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
